Fixed: Nav.js: I fixed the problem I had before about the main menu buttons. If you pressed on a button it was still clicked even if you pressed another button. Now all buttons work. In progress: Because the logo and logoonClick image are from a folder and not from the database I will have to fix it in another way than I did the the main menu buttons. Fixed: DragonTest.js: Imported the under construction image from the right folder, made an alt which will show text if the image aren’t showing for some reason, and return the under construction image. Fixed: _mobile.scss: On the className dragontest text I did little padding bottom to have some spacing to the under construction image. At the className under construction I took away the border I had as well the background colour and just gave it a height and width of 100 procent, at the image itself I made a width of 80 procent, and a special height, made the background repeat on round and background size cover. Test: Made a special id named water, tried with the hover again with no success so I will take that away again. Fixed: _tablet.scss: On the className dragontest title I just changed the text size to bigger so it will be more readable. At the className dragontest text I also changed the text size to bigger but also took little more width to fit the rest better. I took away the under construction className completely because I didnt need to change it, but I had to change the under construction img by setting the height to a special height. Fixed: _desktop.scss: Now it was time to fix the special id logo background which is above the nav menu, I have now fixed it so it wont be as big frame like it were before, I fixed it by changing the height and width, I took away special id logo background img because I dont need to change it at the desktop mode. On the special id logo I changed the height and width, because it had the wrong ones, I also took away the padding top because it werent needed, on the image itself, l

--- a/src/sass/_desktop.scss
+++ b/src/sass/_desktop.scss
@@ -1,30 +1,24 @@
 
 .logo--background{
-    height: 230px;
-    width: 270px;
+    height: 145px;
+    width: 217px;
     align-items: center;
 }
 
 
-.logo--background img {
-    height: 145px;
-    width: 217px;
-}
 
 #logo{
    display: inline-block;
-   height: 170px;
-   width: 200px;
     align-items: center;
-    padding-top: 40px;
-   
+      height: 112px;
+    width: 165px;
 }
 
 
 #logo img{
     height: 112px;
     width: 165px;
-    margin: 20px 10px;
+    margin: 17px 0px 0px 0px;
 }
 
 
@@ -429,19 +423,26 @@ nav{
 
 /*Dragon Test*/
 
-
+.dragontest--container{
+    
+  width: 90%;
+    margin-left: 100px;
+    
+    
+}
+ 
 
 .dragontest--title{
-      font-size: 40px;
+      font-size: 45px;
 }
 
 .dragontest--text{
-     font-size: 30px;
-    width: 40%;
+    font-size: 25px;
+    width: 50%;
 }
 
 .under-construction{
-    width: 600px;
+    width: 70%;
     height: 700px;
    
     
