--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -364,6 +364,16 @@ nav{
      font-size: 22px;
 }
 
+/*hover for all the dragon links*/
+
+#water:hover {
+        background-image:url('../images/BackgroundSrc/dragonscales_homepage.png');
+    
+  }
+
+
+
+
 
 /*Fortune cookie page*/
 
@@ -480,15 +490,19 @@ nav{
 .dragontest--text{
      font-size: 16px;
     width: 80%;
+    padding-bottom: 30px;
 }
 
 .under-construction{
-    width: 250px;
-    height: 300px;
-    border: 1px solid #000;
-    background-color: aqua;
-    
-     
+    width: 100%;
+    height: 100%;
 }
+
+.under-construction img{
+    width: 80%;
+    height: 300px;
+    background-repeat: round; 
+    background-size: cover;
+} 
 
 
