--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -440,16 +440,17 @@ nav img {
 
 
 .dragontest--title{
-      font-size: 30px;
+      font-size: 40px;
 }
 
 .dragontest--text{
-     font-size: 20px;
-    width: 60%;
+     font-size: 28px;
+    width: 70%;
 }
 
-.under-construction{
-    width: 400px;
+
+.under-construction img{
+  
     height: 500px;
    
     
